{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 9,
  "lineage": "4ff3a56b-2cff-07e8-41c9-a05c9ae123eb",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047823777002:vpc/vpc-0644ea859b0b427e4",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06b5b832346a08516",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0fa91c477155e70c9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0644ea859b0b427e4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0caa83191f13476f9",
            "owner_id": "047823777002"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cc34ab2709337aa",
            "arn": "arn:aws:ec2:us-east-1:047823777002:instance/i-0077a1b5801e33f4d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0077a1b5801e33f4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cda",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e271c05681e8a711",
            "private_dns": "ip-172-31-82-169.ec2.internal",
            "private_ip": "172.31.82.169",
            "public_dns": "ec2-3-93-152-243.compute-1.amazonaws.com",
            "public_ip": "3.93.152.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-063a83a1283562b00",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "web-server"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ffb70a300a1996b",
            "tags": {
              "Name": "instance-0"
            },
            "tags_all": {
              "Name": "instance-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07893bbf52c3b55f7"
            ]
          },
          "dependencies": [
            "aws_security_group.web-server"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cc34ab2709337aa",
            "arn": "arn:aws:ec2:us-east-1:047823777002:instance/i-085eddd97677a4de1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085eddd97677a4de1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cda",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09543cee48b1d1cb0",
            "private_dns": "ip-172-31-86-27.ec2.internal",
            "private_ip": "172.31.86.27",
            "public_dns": "ec2-52-91-202-47.compute-1.amazonaws.com",
            "public_ip": "52.91.202.47",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06099adaae1223ba3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "web-server"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ffb70a300a1996b",
            "tags": {
              "Name": "instance-1"
            },
            "tags_all": {
              "Name": "instance-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07893bbf52c3b55f7"
            ]
          },
          "dependencies": [
            "aws_security_group.web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:047823777002:loadbalancer/app/whiz-alb/2d604bf4501f2099",
            "arn_suffix": "app/whiz-alb/2d604bf4501f2099",
            "desync_mitigation_mode": "defensive",
            "dns_name": "whiz-alb-445782429.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:047823777002:loadbalancer/app/whiz-alb/2d604bf4501f2099",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "whiz-alb",
            "security_groups": [
              "sg-07893bbf52c3b55f7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03e155c28aed0aa70"
              },
              {
                "subnet_id": "subnet-0439cd5401ec20509"
              },
              {
                "subnet_id": "subnet-04ffb70a300a1996b"
              },
              {
                "subnet_id": "subnet-0a1047636b9dc68cb"
              },
              {
                "subnet_id": "subnet-0dba8e6578c2daa95"
              },
              {
                "subnet_id": "subnet-0febf3e82a79fc1e2"
              }
            ],
            "subnets": [
              "subnet-03e155c28aed0aa70",
              "subnet-0439cd5401ec20509",
              "subnet-04ffb70a300a1996b",
              "subnet-0a1047636b9dc68cb",
              "subnet-0dba8e6578c2daa95",
              "subnet-0febf3e82a79fc1e2"
            ],
            "tags": {
              "Name": "whiz-alb"
            },
            "tags_all": {
              "Name": "whiz-alb"
            },
            "vpc_id": "vpc-0644ea859b0b427e4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web-server",
            "data.aws_subnet_ids.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:047823777002:listener/app/whiz-alb/2d604bf4501f2099/304b07baf5b95e46",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:047823777002:targetgroup/whiz-tg/21793ed2a159572a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:047823777002:listener/app/whiz-alb/2d604bf4501f2099/304b07baf5b95e46",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:047823777002:loadbalancer/app/whiz-alb/2d604bf4501f2099",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-lb",
            "aws_lb_target_group.target-group",
            "aws_security_group.web-server",
            "data.aws_subnet_ids.subnet",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:047823777002:targetgroup/whiz-tg/21793ed2a159572a",
            "arn_suffix": "targetgroup/whiz-tg/21793ed2a159572a",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:047823777002:targetgroup/whiz-tg/21793ed2a159572a",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "whiz-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0644ea859b0b427e4"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2-attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:047823777002:targetgroup/whiz-tg/21793ed2a159572a-20220706124748514900000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:047823777002:targetgroup/whiz-tg/21793ed2a159572a",
            "target_id": "i-0077a1b5801e33f4d"
          },
          "dependencies": [
            "aws_instance.web-server",
            "aws_lb_target_group.target-group",
            "aws_security_group.web-server",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:047823777002:targetgroup/whiz-tg/21793ed2a159572a-20220706124748467200000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:047823777002:targetgroup/whiz-tg/21793ed2a159572a",
            "target_id": "i-085eddd97677a4de1"
          },
          "dependencies": [
            "aws_instance.web-server",
            "aws_lb_target_group.target-group",
            "aws_security_group.web-server",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047823777002:security-group/sg-07893bbf52c3b55f7",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07893bbf52c3b55f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-server",
            "name_prefix": "",
            "owner_id": "047823777002",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0644ea859b0b427e4"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}